Fix memory parameters for JIRA